dons_tests/valid_kxi/args_type_check.kxi
class MyClass {
    static public void func(int a, char b) {}
}    
void main(){
    MyClass.func(1, 'c');
}
