dons_tests/invalid_kxi/double_dec_constructor.kxi
class MyClass { 
    public int x;
    static public char y;
    MyClass(int a, int b) {}
    public int[] myfunc() {}
    MyClass() {}
}
void main(){}
